# shared-enum-cpp

./: CMakeLists.txt  LICENSE  README.md
include/trak/: shared_bitfield.hpp  shared_enum.hpp
test/: CMakeLists.txt  shared_enum_test.cpp
